nit: Tweak path example formatting and include `.com` for clarity

--- a/docs/src/content/docs/de/getting-started.mdx
+++ b/docs/src/content/docs/de/getting-started.mdx
@@ -62,9 +62,9 @@ Starlight unterstützt das Erstellen von Inhalten in Markdown und MDX. (Du kanns
 
 Füge neue Seiten zu deiner Webseite automatisch hinzu, indem du `.md` oder `.mdx` Dateien in `src/content/docs/` erstellst. Erstelle Unterordner, um deine Dateien zu organisieren und mehrere Pfadsegmente zu erstellen:
 
-```js
-`src/content/docs/hello-world.md` -> `your-site/hello-world`
-`src/content/docs/guides/faq.md` -> `your-site/guides/faq`
+```
+src/content/docs/hello-world.md => your-site.com/hello-world
+src/content/docs/guides/faq.md => your-site.com/guides/faq
 ```
 
 ### Typsichere Frontmatter
