--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -58,13 +58,13 @@ Starlight is ready for you to add new content, or bring your existing files!
 
 Starlight supports authoring content in Markdown and MDX. (You can add support for Markdoc by installing the experimental [Astro Markdoc integration](https://docs.astro.build/en/guides/integrations-guide/markdoc/).)
 
-
 ### Add pages
+
 Add new pages to your site automatically by creating `.md` or `.mdx` files in `src/content/docs/`. Add sub-folders to organize your files, and to create multiple path segments:
 
-```js
-`src/content/docs/hello-world.md` -> `your-site/hello-world`
-`src/content/docs/guides/faq.md` -> `your-site/guides/faq`
+```
+src/content/docs/hello-world.md => your-site.com/hello-world
+src/content/docs/guides/faq.md => your-site.com/guides/faq
 ```
 
 ### Type-safe frontmatter
