--- a/docs/src/content/docs/ja/getting-started.mdx
+++ b/docs/src/content/docs/ja/getting-started.mdx
@@ -60,9 +60,9 @@ Starlightでは、MarkdownとMDXでコンテンツを作成できます。（Mar
 
 `src/content/docs/`に`.md`または`.mdx`ファイルを作成して、サイトに新しいページを自動で追加できます。ファイルを整理するためにサブフォルダを追加し、複数のパスセグメントを作成することもできます。
 
-```js
-`src/content/docs/hello-world.md` -> `your-site/hello-world`
-`src/content/docs/guides/faq.md` -> `your-site/guides/faq`
+```
+src/content/docs/hello-world.md => your-site.com/hello-world
+src/content/docs/guides/faq.md => your-site.com/guides/faq
 ```
 
 ### 型安全なフロントマター
