--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -61,9 +61,9 @@ Starlight admite la creación de contenido en Markdown y MDX. (Puedes agregar co
 
 Agrega nuevas páginas a tu sitio automáticamente creando archivos `.md` o `.mdx` en `src/content/docs/`. Agrega subcarpetas para organizar tus archivos y crear segmentos de ruta múltiples.
 
-```js
-`src/content/docs/hello-world.md` -> `tu-sitio/hello-world`
-`src/content/docs/guides/faq.md` -> `tu-sitio/guides/faq`
+```
+src/content/docs/hello-world.md => tu-sitio.com/hello-world
+src/content/docs/guides/faq.md => tu-sitio.com/guides/faq
 ```
 
 ### Frontmatter con seguridad de tipos
