--- a/docs/src/content/docs/fr/getting-started.mdx
+++ b/docs/src/content/docs/fr/getting-started.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 :::caution[Work in progress]
 Starlight est en début de développement.
-Si vous trouvez quelque chose qui ne fonctionne pas,  [ouvrez une issue sur GitHub](https://github.com/withastro/starlight/issues/new/choose) ou faites-le nous savoir sur [Discord](https://astro.build/chat).
+Si vous trouvez quelque chose qui ne fonctionne pas, [ouvrez une issue sur GitHub](https://github.com/withastro/starlight/issues/new/choose) ou faites-le nous savoir sur [Discord](https://astro.build/chat).
 :::
 
 ## Créer un nouveau projet
@@ -59,11 +59,12 @@ Starlight est conçu pour que vous puissiez ajouter du nouveau contenu, ou appor
 Starlight prend en charge la création de contenu en Markdown et MDX. (Vous pouvez ajouter la prise en charge de Markdoc en installant l'intégration expérimentale [Astro Markdoc integration](https://docs.astro.build/fr/guides/integrations-guide/markdoc/).)
 
 ### Ajouter des pages
+
 Ajoutez automatiquement de nouvelles pages à votre site en créant des fichiers `.md` ou `.mdx` dans `src/content/docs/`. Ajoutez des sous-dossiers pour organiser vos fichiers, et pour créer plusieurs segments de chemin :
 
-```js
-`src/content/docs/hello-world.md` -> `votre-site/hello-world`
-`src/content/docs/guides/faq.md` -> `votre-site/guides/faq`
+```
+src/content/docs/hello-world.md => votre-site.com/hello-world
+src/content/docs/guides/faq.md => votre-site.com/guides/faq
 ```
 
 ### Type-safe frontmatter
