Apply suggestions from code review
Grazie mille dei suggerimenti 😀!
Non credevo di aver lasciato così tanti errori 😬

Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/it/getting-started.mdx
+++ b/docs/src/content/docs/it/getting-started.mdx
@@ -55,15 +55,15 @@ Starlight è pronto per aggiungere nuovi contenuti, compresi i tuoi file!
 
 ### Formati dei file
 
-Starlight supporta la creazione di contenuti in Markdown e MDX. (Puoi aggiungere il supporto per Markdoc installando l'integrazione sperimentale [Astro Markdoc](https://docs.astro.build/fr/guides/integrations-guide/markdoc/)).
+Starlight supporta la creazione di contenuti in Markdown e MDX. (Puoi aggiungere il supporto per Markdoc installando l'integrazione sperimentale [Astro Markdoc](https://docs.astro.build/en/guides/integrations-guide/markdoc/)).
 
 ### Aggiungere pagine
 
 Aggiungi pagine automaticamente creando file `.md` o `.mdx` in `src/content/docs/`. Aggiungi sotto-cartelle per organizzare i file e creare percorsi multipli:
 
 ```
-src/content/docs/hello-world.md => votre-site.com/hello-world
-src/content/docs/guides/faq.md => votre-site.com/guides/faq
+src/content/docs/hello-world.md => il-tuo-sito.com/hello-world
+src/content/docs/guides/faq.md => il-tuo-sito.com/guides/faq
 ```
 
 ### Type-safe frontmatter
@@ -83,7 +83,7 @@ Se dovessi dimenticare qualcosa di importante, Starlight te lo farà sapere.
 
 Una volta creato e personalizzato il tuo sito Starlight, puoi pubblicarlo in una piattaforma a tua scelta, inclusi Netlify, Vercel, GitHub Pages e molti altri.
 
-[Impara come pubblicare un sito Astro nella documentazione](https://docs.astro.build/fr/guides/deploy/)
+[Impara come pubblicare un sito nella documentazione Astro](https://docs.astro.build/en/guides/deploy/)
 
 ## Aggiornare Starlight
 
