--- a/docs/src/content/docs/it/guides/components.mdx
+++ b/docs/src/content/docs/it/guides/components.mdx
@@ -7,7 +7,7 @@ I componenti permettono di riutilizzare un elemento UI o altro ripetutamente.
 Degli esempi potrebbero essere delle sezioni di link o un video YouTube integrato.
 Starlight supporta l'utilizzo di questi nei file [MDX](https://mdxjs.com/) e fornisce dei componenti per te già pronti.
 
-[Vedi di più sulla costruzione di componenti nella documentazione Astro](https://docs.astro.build/fr/core-concepts/astro-components/).
+[Vedi di più sulla costruzione di componenti nella documentazione Astro](https://docs.astro.build/en/core-concepts/astro-components/).
 
 ## Utilizzare un componente
 
@@ -31,7 +31,7 @@ import AnotherComponent from '../../components/AnotherComponent.astro';
 ```
 
 Siccome Starlight è integrato con Astro, puoi aggiungere componenti costruiti con qualsiasi [UI framework supportato (React, Preact, Svelte, Vue, Solid, Lit, and Alpine)](https://docs.astro.build/en/core-concepts/framework-components/).
-Vedi di più su come [usare componenti in MDX](https://docs.astro.build/fr/guides/markdown-content/#using-components-in-mdx) nella documentazione Astro.
+Vedi di più su come [usare componenti in MDX](https://docs.astro.build/en/guides/markdown-content/#using-components-in-mdx) nella documentazione Astro.
 
 ## Componenti integrati
 
@@ -96,7 +96,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 :::tip[Suggerimento]
 Usa la griglia nella pagina principale per evidenziare le funzionalità chiave del progetto.
-Aggiungi l'attributo `stagger` per rappresentare la seconda colonna più in basso per rendere il tutto più interessanti:
+Aggiungi l'attributo `stagger` per rappresentare la seconda colonna più in basso per rendere il tutto più interessante:
 
 ```astro
 <CardGrid stagger>
