--- a/docs/src/content/docs/it/index.mdx
+++ b/docs/src/content/docs/it/index.mdx
@@ -21,7 +21,7 @@ import { CardGrid, Card } from '@astrojs/starlight/components';
 import AboutAstro from '../../../components/about-astro.astro';
 
 <CardGrid stagger>
-  <Card title="Documentazione deliziosa" icon="open-book">
+  <Card title="Documentazione che delizia" icon="open-book">
     Include: Navigazione, ricerca, internazionalizzazione, ottimizzazione del motore di ricerca, caratteri facili da leggere, evidenziazione del codice, tema scuro e altro.
   </Card>
   <Card title="Basato su Astro" icon="rocket">
