--- a/docs/src/content/docs/es/guides/i18n.mdx
+++ b/docs/src/content/docs/es/guides/i18n.mdx
@@ -196,7 +196,7 @@ Estos son los valores predeterminados en inglés de las cadenas existentes que s
    ```
 
 
-   El modal de búsqueda de Starlight está impulsada por la biblioteca [Pagefind](https://pagefind.app/).
+   El modal de búsqueda de Starlight está impulsado por la biblioteca [Pagefind](https://pagefind.app/).
    Puedes establecer traducciones para la UI de Pagefind en el mismo archivo JSON utilizando claves `pagefind`:
 
    ```json
