Add i18n to Search component dev warning

--- a/docs/src/content/docs/guides/i18n.mdx
+++ b/docs/src/content/docs/guides/i18n.mdx
@@ -183,6 +183,7 @@ You can provide translations for additional languages you support — or overrid
      "search.label": "Search",
      "search.shortcutLabel": "(Press / to Search)",
      "search.cancelLabel": "Cancel",
+     "search.devWarning": "Search is only available in production builds. \nTry building and previewing the site to test it out locally.",
      "themeSelect.accessibleLabel": "Select theme",
      "themeSelect.dark": "Dark",
      "themeSelect.light": "Light",
