--- a/docs/src/content/docs/404.md
+++ b/docs/src/content/docs/404.md
@@ -4,7 +4,7 @@ template: splash
 editUrl: false
 hero:
   title: '404'
-  tagline: Houston we have a problem.<br>We couldn’t find that link.<br>Check the address or try searching for what you were looking for.
+  tagline: <strong>Houston we have a problem.</strong> We couldn’t find that page.<br>Check the URL or try using the search bar.
   actions:
     - text: Go home
       icon: right-arrow
