--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -46,7 +46,7 @@ Adding a custom logo to the site header is a quick way to add your individual br
 
 By default, the logo will be displayed alongside your site’s `title`.
 If your logo image already includes the site title, you can visually hide the title text by setting the `replacesTitle` option.
-The `title` text will still be included for screen readers, so that the header remains accessible.
+The `title` text will still be included for screen readers so that the header remains accessible.
 
 ```js
 starlight({
