Apply less confusing verbs
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -229,7 +229,7 @@ export default defineConfig({
 
 ## Custom CSS styles
 
-Customize the styles applied to your Starlight site by providing additional CSS files to apply, modifying or extending Starlight’s default styles.
+Customize the styles applied to your Starlight site by providing additional CSS files to modify or extend Starlight’s default styles.
 
 1. Add a CSS file to your `src/` directory.
    For example, you could override Starlight’s default blue accent hue to purple:
