--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -25,7 +25,7 @@ Adding a custom logo to the site header is a quick way to add your individual br
 
    </FileTree>
 
-2. Add the path to your logo as Starlight’s `logo.src` option in `astro.config.mjs`:
+2. Add the path to your logo as Starlight’s [`logo.src`](/reference/configuration/#logo) option in `astro.config.mjs`:
 
    ```js
    // astro.config.mjs
@@ -91,7 +91,7 @@ You can display different versions of your logo in light and dark mode.
 
 By default, Starlight pages use a layout with a global navigation sidebar and a table of contents that shows the current page headings.
 
-You can apply a wider page layout without sidebars by setting `template: splash` in a page’s frontmatter.
+You can apply a wider page layout without sidebars by setting [`template: splash`](/reference/frontmatter/#template) in a page’s frontmatter.
 This works particularly well for landing pages and you can see it in action on the [homepage of this site](/).
 
 ```md
