--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -205,7 +205,7 @@ export default defineConfig({
 
 Starlight can display an “Edit page” link in each page’s footer.
 This makes it easy for a reader to find the file to edit to improve your docs.
-For open source projects in particular, this can help encourage contributions from your users.
+For open-source projects in particular, this can help encourage contributions from your community.
 
 To enable edit links, set [`editLink`](/reference/configuration/#editlink) in the Starlight integration config.
 The value of `editLink.baseUrl` will be prepended to the path to the current page to form the full edit link.
