--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -271,7 +271,7 @@ If you do need to add a custom font to your Starlight site, this guide will show
 ### Set up fonts
 
 If you already have font files, follow the [local set-up guide](#set-up-local-font-files).
-If you are considering using Google Fonts, we recommend following the [Fontsource set-up guide](#set-up-a-fontsource-font).
+To use Google Fonts, follow the [Fontsource set-up guide](#set-up-a-fontsource-font).
 
 #### Set up local font files
 
