--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -304,7 +304,7 @@ To use Google Fonts, follow the [Fontsource set-up guide](#set-up-a-fontsource-f
    }
    ```
 
-3. Add your `@font-face` declarations to Starlight’s `customCss` array in `astro.config.mjs`:
+3. Add the path to your `font-face.css` file to Starlight’s `customCss` array in `astro.config.mjs`:
 
    ```js
    // astro.config.mjs
