--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -60,7 +60,7 @@ starlight({
 
 ### Light and dark logo variants
 
-You can display different versions of your logo in light and dark mode.
+You can display different versions of your logo in light and dark modes.
 
 1. Add an image file for each variant to `src/assets/`:
 
