--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -50,6 +50,33 @@ Try Starlight in your browser:
 [open the template on StackBlitz](https://stackblitz.com/github/withastro/starlight/tree/main/examples/basics).
 :::
 
+
+## Add starlight to an existing project
+
+Use the `astro add` command:
+<Tabs>
+    <TabItem label="npm">
+        ```sh
+        # upgrade Starlight with npm
+        npx astro add starlight
+        ```
+
+    </TabItem>
+    <TabItem label="pnpm">
+        ```sh
+        # upgrade Starlight with pnpm
+        pnpx astro add starlight
+        ```
+    </TabItem>
+    <TabItem label="Yarn">
+        ```sh
+        # upgrade Starlight with yarn
+        yarn dlx astro add starlight
+        ```
+    </TabItem>
+</Tabs>
+
+
 ## Creating content with Starlight
 
 Starlight is ready for you to add new content, or bring your existing files!
