--- a/docs/src/content/docs/es/guides/i18n.mdx
+++ b/docs/src/content/docs/es/guides/i18n.mdx
@@ -178,6 +178,7 @@ Estos son los valores predeterminados en inglés de las cadenas existentes que s
      "search.label": "Search",
      "search.shortcutLabel": "(Press / to Search)",
      "search.cancelLabel": "Cancel",
+     "search.devWarning": "Search is only available in production builds. \nTry building and previewing the site to test it out locally.",
      "themeSelect.accessibleLabel": "Select theme",
      "themeSelect.dark": "Dark",
      "themeSelect.light": "Light",
