Must instead of need to

--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -275,7 +275,7 @@ Customize the styles applied to your Starlight site by providing additional CSS 
 By default, Starlight uses sans-serif fonts available on a user’s local device for all text.
 This ensures documentation loads quickly in a font that is familiar to each user, without requiring extra bandwidth to download large font files.
 
-If you do need to add a custom font to your Starlight site, you can set up fonts to use in custom CSS files or with any other [Astro styling technique](https://docs.astro.build/en/guides/styling/).
+If you must add a custom font to your Starlight site, you can set up fonts to use in custom CSS files or with any other [Astro styling technique](https://docs.astro.build/en/guides/styling/).
 
 ### Set up fonts
 
