--- a/packages/starlight/translations/es.json
+++ b/packages/starlight/translations/es.json
@@ -3,7 +3,7 @@
   "search.label": "Buscar",
   "search.shortcutLabel": "(Presiona / para buscar)",
   "search.cancelLabel": "Interrumpir",
-  "search.devWarning": "Search is only available in production builds. \nTry building and previewing the site to test it out locally.",
+  "search.devWarning": "La búsqueda solo está disponible en las versiones de producción.  \nIntenta construir y previsualizar el sitio para probarlo localmente.",
   "themeSelect.accessibleLabel": "Seleccionar tema",
   "themeSelect.dark": "Oscuro",
   "themeSelect.light": "Claro",
