Support custom 404 pages (#226)
Co-authored-by: Josh Pollara <75546+joshpollara@users.noreply.github.com>

--- a/packages/starlight/translations/it.json
+++ b/packages/starlight/translations/it.json
@@ -17,5 +17,6 @@
 	"page.editLink": "Modifica pagina",
 	"page.lastUpdated": "Ultimo aggiornamento:",
 	"page.previousLink": "Indietro",
-	"page.nextLink": "Avanti"
+	"page.nextLink": "Avanti",
+	"404.text": "Pagina non trovata. Verifica l'URL o prova a utilizzare la barra di ricerca."
 }
