i18n(fr): link back to french home
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/fr/404.md
+++ b/docs/src/content/docs/fr/404.md
@@ -8,6 +8,6 @@ hero:
   actions:
     - text: Retourner à l’accueil
       icon: right-arrow
-      link: /
+      link: /fr/
       variant: primary
 ---
