update nl translations

--- a/packages/starlight/translations/nl.json
+++ b/packages/starlight/translations/nl.json
@@ -13,7 +13,7 @@
   "sidebarNav.accessibleLabel": "Hoofdnavigatie",
   "tableOfContents.onThisPage": "Op deze pagina",
   "tableOfContents.overview": "Overzicht",
-  "i18n.untranslatedContent": "Deze content is nog niet vertaald.",
+  "i18n.untranslatedContent": "Deze inhoud is nog niet vertaald.",
   "page.editLink": "Bewerk pagina",
   "page.lastUpdated": "Laatst bewerkt:",
   "page.previousLink": "Laatste",
